docs/kubernetes/security/2-pod2pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  selector:
    app: httpd
  ports:
  - name: http
    port: 80
