docs/kubernetes/security/3-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-to-pod
spec:
  podSelector:
    matchLabels:
      app: busybox
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: busybox
    ports:
    - port: 80
      protocol: TCP
